# timothy-rs

./: Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  natives.rs
scripts/: counter.timothy  vector.timothy
src/: ast.rs~  closure.rs  function_core.rs  gc.rs  lexer.rs  main.rs  main.rs~  managed.rs  native_fun.rs  native_fun.rs~  native_map.rs~  opcode.rs  out  parser.rs  parser.rs~  token.rs  upvalue.rs  utils.rs  value.rs  value.rs~  vm.rs  vm.rs~
test_scripts/: test_for.tim
